# RoTracker

./: LICENSE  README.md
backend_node/: .env  package-lock.json  package.json  server.js
backend_rust/: .env  Cargo.toml
backend_rust/player_data/: 104856182.json  1280321255.json  1420835915.json  152736128.json
backend_rust/src/: main.rs
extension/: manifest.json  package-lock.json  package.json
extension/playerdetails/: details.html  details.js  style_copy.css  styles.css
extension/popup/: popup.css  popup.html  popup.js
