[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
chrono = "0.4.38"
colored = "2.1.0"
dotenv = "0.15.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde =  { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }

[features]
dumb_terminal = ["colored/no-color"]
